--- a/fitur1.html
+++ b/fitur1.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -7,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>data market</title>
   <style>
-    /* === GAYA SAMA SEPERTI SEBELUMNYA === */
     * {
       margin: 0;
       padding: 0;
@@ -64,7 +62,7 @@
     }
     table {
       width: 100%;
-      min-width: 880px;
+      min-width: 920px;
       border-collapse: collapse;
     }
     th, td {
@@ -139,13 +137,10 @@
   <div id="status"></div>
   <div id="fitur1-container"></div>
 
-  <!-- Firebase SDK -->
   <script type="module">
-    // === IMPOR MODUL FIREBASE ===
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-    // === KONFIGURASI FIREBASE ANDA ===
     const firebaseConfig = {
       apiKey: "AIzaSyALc-1SYjzRUcB-Ws01rab1mxlmcv2e6dA",
       authDomain: "nomoromosse.firebaseapp.com",
@@ -156,13 +151,14 @@
       appId: "1:985183830784:web:fae21bdb94c1f0103769e5"
     };
 
-    // Inisialisasi Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
 
-    // === KONSTANTA & FUNGSI PERHITUNGAN (SAMA SEPERTI ASLI) ===
-    const TABLE_HEADERS = ["res", "B", "C", "D", "G", "H", "I", "J", "K", "R", "Y", "A", "M", "N", "L"];
+    // === HEADER DIPERBARUI: TAMBAH "tgl" ===
+    const TABLE_HEADERS = ["tgl", "res", "B", "C", "D", "G", "H", "I", "J", "K", "R", "Y", "A", "M", "N", "L"];
     const ACTION_HEADER = "Aksi";
+
+    // === KONSTANTA KONTROL (TIDAK BERUBAH) ===
     const KONTROL_B = {1:["1","2","6","7","8","9"],2:["0","2","3","7","8","9"],3:["0","1","3","4","8","9"],4:["0","1","2","4","5","9"],5:["0","1","2","3","5","6"],6:["1","2","3","4","6","7"],7:["2","3","4","5","7","8"],8:["3","4","5","6","8","9"],9:["0","4","5","6","7","9"],0:["1","2","3","4","5","6"]};
     const KONTROL_C = {0:["3","4","5","6","8","9"],1:["0","2","3","4","6","9"],2:["1","2","3","5","6","8"],3:["0","1","2","3","4","9"],4:["1","2","3","6","8","9"],5:["0","1","2","3","4","5","9"],6:["0","2","3","5","6","9"],7:["0","1","2","3","8","9"],8:["2","3","4","6","7","9"],9:["1","2","3","4","5","6"]};
     const KONTROL_G = {0:["0","1","2","7","8","9"],1:["0","1","2","3","8","9"],2:["0","1","2","3","4","9"],3:["0","1","2","3","4","5"],4:["1","2","3","4","5","6"],5:["2","3","4","5","6","7"],6:["3","4","5","6","7","8"],7:["4","5","6","7","8","9"],8:["5","6","7","8","9","0"],9:["6","7","8","9","0","1"]};
@@ -176,8 +172,7 @@
     const KONTROL_M = {0:["9","0","1","2","3"],1:["8","9","0","1","2"],2:["3","4","5","6","7"],3:["3","4","5","6","7"],4:["5","6","7","8","9"],5:["0","1","2","3","4"],6:["7","8","9","0","1"],7:["2","3","4","5","6"],8:["1","2","3","4","5"],9:["4","5","6","7","8"]};
     const KONTROL_N = {0:["1","4","6","9"],1:["0","2","5","7"],2:["1","3","6","8"],3:["2","4","7","9"],4:["0","3","5","8"],5:["6","4","1","9"],6:["7","5","0","2"],7:["8","6","3","1"],8:["9","7","4","2"],9:["0","8","5","3"]};
 
-    // --- Fungsi calculateKontrolB hingga calculateKontrolN: SAMA SEPERTI ASLI ---
-    // (Disingkat di sini untuk efisiensi — semua fungsi disalin utuh dari kode asli Anda)
+    // === FUNGSI PERHITUNGAN (TIDAK BERUBAH) ===
     function calculateKontrolB(resSourceValue, resTargetValue) {
       if (!/^\d+$/.test(resSourceValue) || resSourceValue.length < 2 || !/^\d+$/.test(resTargetValue) || resTargetValue.length < 2) {
         return { value: "", isError: false };
@@ -199,9 +194,6 @@
       if (resultDigits.length > 0) return { value: resultDigits.join(''), isError: false };
       else return { value: "X", isError: true };
     }
-
-    // (Fungsi calculateKontrolC hingga calculateKontrolN: disalin utuh seperti di file asli Anda)
-    // ... [fungsi-fungsi lainnya tetap sama] ...
 
     function calculateKontrolC(resSourceValue, resTargetValue) {
       const kepalaSource = resSourceValue[2];
@@ -433,73 +425,85 @@
       else return { value: "X", isError: true };
     }
 
-    // === LOGIKA TABEL & PERHITUNGAN ===
+    // === UTILITAS FORMAT TANGGAL ===
+    function formatTanggalInput(inputElement) {
+      inputElement.addEventListener('input', function(e) {
+        let value = e.target.value.replace(/\D/g, ''); // hanya angka
+        if (value.length > 4) value = value.slice(0, 4);
+        if (value.length >= 2) {
+          value = value.slice(0, 2) + '/' + value.slice(2);
+        }
+        e.target.value = value;
+      });
+    }
+
+    // === LOGIKA TABEL ===
     function calculateRow(targetRow) {
       const tbody = targetRow.parentElement;
       const allRows = Array.from(tbody.querySelectorAll('tr'));
       const targetIndex = allRows.indexOf(targetRow);
       const sourceIndex = (targetIndex === 0) ? 0 : targetIndex - 1;
       const sourceRow = allRows[sourceIndex];
-      if (targetIndex === 0 && !sourceRow?.querySelector('td input')?.value) return;
+      if (targetIndex === 0 && !sourceRow?.querySelectorAll('td input')[1]?.value) return;
       if (!sourceRow) return;
 
-      const resSourceValue = sourceRow.querySelector('td input').value;
-      const resTargetValue = targetRow.querySelector('td input').value;
+      const resSourceValue = sourceRow.querySelectorAll('td input')[1]?.value || '';
+      const resTargetValue = targetRow.querySelectorAll('td input')[1]?.value || '';
 
       const inputs = targetRow.querySelectorAll('td input');
-      if (inputs.length < 15) return;
+      if (inputs.length < 16) return;
 
       const bResult = calculateKontrolB(resSourceValue, resTargetValue);
-      inputs[1].value = bResult.value;
-      inputs[1].classList.toggle('input-error', bResult.isError);
+      inputs[2].value = bResult.value;
+      inputs[2].classList.toggle('input-error', bResult.isError);
 
       const cResult = calculateKontrolC(resSourceValue, resTargetValue);
-      inputs[2].value = cResult.value;
-      inputs[2].classList.toggle('input-error', cResult.isError);
+      inputs[3].value = cResult.value;
+      inputs[3].classList.toggle('input-error', cResult.isError);
 
       const dResult = calculateKontrolD(resSourceValue, resTargetValue);
-      inputs[3].value = dResult.value;
-      inputs[3].classList.toggle('input-error', dResult.isError);
+      inputs[4].value = dResult.value;
+      inputs[4].classList.toggle('input-error', dResult.isError);
 
       const gResult = calculateKontrolG(resSourceValue, resTargetValue);
-      inputs[4].value = gResult.value;
-      inputs[4].classList.toggle('input-error', gResult.isError);
+      inputs[5].value = gResult.value;
+      inputs[5].classList.toggle('input-error', gResult.isError);
 
       const hResult = calculateKontrolH(resSourceValue, resTargetValue);
-      inputs[5].value = hResult.value;
-      inputs[5].classList.toggle('input-error', hResult.isError);
+      inputs[6].value = hResult.value;
+      inputs[6].classList.toggle('input-error', hResult.isError);
 
       const iResult = calculateKontrolI(resSourceValue, resTargetValue);
-      inputs[6].value = iResult.value;
-      inputs[6].classList.toggle('input-error', iResult.isError);
+      inputs[7].value = iResult.value;
+      inputs[7].classList.toggle('input-error', iResult.isError);
 
       const jResult = calculateKontrolJ(resSourceValue, resTargetValue);
-      inputs[7].value = jResult.value;
-      inputs[7].classList.toggle('input-error', jResult.isError);
+      inputs[8].value = jResult.value;
+      inputs[8].classList.toggle('input-error', jResult.isError);
 
       const kResult = calculateKontrolK(resSourceValue, resTargetValue);
-      inputs[8].value = kResult.value;
-      inputs[8].classList.toggle('input-error', kResult.isError);
+      inputs[9].value = kResult.value;
+      inputs[9].classList.toggle('input-error', kResult.isError);
 
       const rResult = calculateKontrolR(resSourceValue, resTargetValue);
-      inputs[9].value = rResult.value;
-      inputs[9].classList.toggle('input-error', rResult.isError);
+      inputs[10].value = rResult.value;
+      inputs[10].classList.toggle('input-error', rResult.isError);
 
       const yResult = calculateKontrolY(resSourceValue, resTargetValue);
-      inputs[10].value = yResult.value;
-      inputs[10].classList.toggle('input-error', yResult.isError);
+      inputs[11].value = yResult.value;
+      inputs[11].classList.toggle('input-error', yResult.isError);
 
       const aResult = calculateKontrolA(resSourceValue, resTargetValue);
-      inputs[11].value = aResult.value;
-      inputs[11].classList.toggle('input-error', aResult.isError);
+      inputs[12].value = aResult.value;
+      inputs[12].classList.toggle('input-error', aResult.isError);
 
       const mResult = calculateKontrolM(resSourceValue, resTargetValue);
-      inputs[12].value = mResult.value;
-      inputs[12].classList.toggle('input-error', mResult.isError);
+      inputs[13].value = mResult.value;
+      inputs[13].classList.toggle('input-error', mResult.isError);
 
       const nResult = calculateKontrolN(resSourceValue, resTargetValue);
-      inputs[13].value = nResult.value;
-      inputs[13].classList.toggle('input-error', nResult.isError);
+      inputs[14].value = nResult.value;
+      inputs[14].classList.toggle('input-error', nResult.isError);
     }
 
     function recalculateFrom(startingRow) {
@@ -531,7 +535,6 @@
           const next = row.nextElementSibling;
           row.remove();
           if (next) recalculateFrom(next);
-          // Simpan otomatis setelah hapus
           const tableId = row.closest('table').id;
           saveDataToFirebase(tableId);
         }
@@ -539,11 +542,18 @@
       actionTd.appendChild(deleteBtn);
       tr.appendChild(actionTd);
 
-      tr.querySelector('input').addEventListener('input', () => {
+      const inputs = tr.querySelectorAll('input');
+      formatTanggalInput(inputs[0]);
+      inputs[0].maxLength = 5;
+      inputs[0].placeholder = "DD/MM";
+      inputs[1].placeholder = "4D";
+
+      tr.addEventListener('input', () => {
         const tableId = tr.closest('table').id;
         recalculateFrom(tr);
-        saveDataToFirebase(tableId); // Auto-save saat input berubah
+        saveDataToFirebase(tableId);
       });
+
       return tr;
     }
 
@@ -555,7 +565,7 @@
       saveDataToFirebase(tableId);
     }
 
-    // === FIREBASE: SIMPAN & MUAT DATA ===
+    // === FIREBASE ===
     function showStatus(msg, isSuccess = true) {
       const statusEl = document.getElementById('status');
       statusEl.textContent = msg;
@@ -584,9 +594,21 @@
         if (snapshot.exists()) {
           const data = snapshot.val();
           data.forEach(rowData => {
+            let safeRowData = [...rowData];
+            if (rowData.length === 15) {
+              // Data lama: tidak ada kolom tgl
+              safeRowData = ["", ...rowData];
+            }
+            if (safeRowData.length > 16) {
+              safeRowData = safeRowData.slice(0, 16);
+            }
+            while (safeRowData.length < 16) {
+              safeRowData.push("");
+            }
+
             const tr = createRow();
             const inputs = tr.querySelectorAll("input");
-            rowData.forEach((val, i) => {
+            safeRowData.forEach((val, i) => {
               if (inputs[i]) inputs[i].value = val;
             });
             tbody.appendChild(tr);
@@ -597,7 +619,7 @@
           addRow(tableId);
         }
       } catch (error) {
-        console.error("Gagal muat data:", error);
+        console.error("Gagal muat ", error);
         showStatus("✗ Gagal memuat data", false);
         addRow(tableId);
       }
@@ -649,9 +671,8 @@
       return btn;
     }
 
-    // === INISIALISASI ===
     document.addEventListener("DOMContentLoaded", () => {
-      const markets = ["SGP", "Taiwan", "Hongkong", "Sidney", "China"];
+      const markets = ["Cambodia", "Sidney", "China", "Japan", "SGP", "Taiwan", "Hongkong", "Nusa"];
       markets.forEach(market => {
         initMarket(market);
       });
@@ -659,4 +680,3 @@
   </script>
 </body>
 </html>
-
